use minimum configuration