@@ -43,14 +43,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
-          <arguments>--enable-preview</arguments>
           <jvmArguments>--enable-preview</jvmArguments>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
         <configuration>
           <argLine>--enable-preview</argLine>
         </configuration>
@@ -58,7 +56,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
         <configuration>
           <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
